--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -12,10 +12,15 @@ layout: default
 		{% include post-meta.html %}
     {{ content }}
 
-		{% include nav-share.html %}
+		<div style="display:none;">
+			{% include nav-share.html %}
+			{% include post-comments.html %}
+		</div>
 
-		{% include post-comments.html %}
-
+		<div class="fb-comments"
+		     data-href={{ site.url | append: page.url }}
+		     width="100%"
+		     data-numposts="5" ></div>
   </article>
 
 	{% if page.aside == true %}{% include site-aside.html %}{% endif %}
